Limpiar Comentarios, arreglo menor